# tmux-conf

./: CMakeLists.txt  README.md
config/: tmux.conf
